Mini descripcion y modulo de vuelo

--- a/index.html
+++ b/index.html
@@ -26,6 +26,54 @@
     
 
 
+    <main>
+
+<section>
+
+    <div class="descripcion">
+
+        <h2>Aero Domingo</h2>
+        <p>ElecticTrans Airlines es una aerolínea moderna enfocada en 
+            ofrecer viajes seguros, accesibles y eficientes. Nuestro 
+            compromiso es conectar ciudades y personas a través de un 
+            servicio confiable, cómodo y pensado para el pasajero.</p>
+    </div>
+
+    <div class="imagen-Inicial">
+        <img src="" alt="Imagen de un avion">
+    </div>
+
+</section>
+
+<section class="moduloVuelo">
+
+    <div class="modulo">
+
+        <input type="text" name="salida" id="salida" placeholder="Ciudad de salida">
+        <input type="text" name="destino" id="destino" placeholder="Ciudad de destino">
+
+        <input type="date" name="fecha-salida" id="fecha-salida">
+        <input type="date" name="fecha-regreso" id="fecha-regreso">
+
+        <input type="number" name="pasajeros" id="pasajeros" placeholder="Numero de pasajeros">
+
+        <input type="button" name="buscar" id="buscar" value="Buscar Vuelos">
+
+    </div>
+
+
+</section>
+
+
+
+
+
+
+
+
+    </main>
+
+
 
 
 
