servicios de la aerolinea

--- a/index.html
+++ b/index.html
@@ -64,16 +64,47 @@
 
 </section>
 
+<section class="servicios">
 
+    <h2>Servicios disponibles</h2>
 
+    <div>
+        <h3>Servicios para pasajeros</h3>
+        <ul>
+            <li>Búsqueda de vuelos por origen, destino y fecha</li>
+            <li>Reserva y compra de boletos</li>
+            <li>Check-in en línea</li>
+            <li>Selección de asientos</li>
+            <li>Gestión de equipaje (maleta de mano y documentada)</li>
+            <li>Consulta del estado del vuelo (a tiempo, retrasado, cancelado)</li>
+            <li>Cambios y cancelaciones de vuelos</li>
+        </ul>
+    </div>
 
+    <div>
+        <h3>Servicio a bordo</h3>
+        <ul>
+            <li>Asientos cómodos</li>
+            <li>Servicio de bebidas y snacks</li>
+            <li>Entretenimiento a bordo (en vuelos largos)</li>
+            <li>Asistencia especial (personas con discapacidad, niños, adultos mayores)</li>
+        </ul>
+    </div>
 
-
+    <div>
+        <h3>servicios adicionales</h3>
+        <ul>
+            <li>Viajes corporativos</li>
+            <li>Programas de fidelidad (millas o puntos)</li>
+            <li>Ofertas y promociones</li>
+            <li>Seguro de viaje</li>
+            <li>Alquiler de autos y hoteles (opcional)</li>
+        </ul>
+    </div>
+</section>
 
 
     </main>
-
-
 
 
 
