contacto de la aerolinea

--- a/index.html
+++ b/index.html
@@ -107,6 +107,31 @@
     </main>
 
 
+    <footer>
+
+    <div class="contacto">
+
+        <form id="contacto">
+
+            <label for="nombre">Nombre</label>
+            <input type="text" name="nombre" id="nombre" placeholder="José Ramírez">
+
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" placeholder="JoseRamirez@gmail.com">
+
+            <label for="comentario">Comentario</label>
+            <textarea name="comentario" id="comentario"></textarea>
+
+            <button type="button">Enviar</button>
+
+        </form>
+
+    </div>
+
+
+
+</footer>
+
 
 
 
