Diseño de la bienvenida, sobre nosotros y buscarV

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PCE-Aerolinea</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
+
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -31,10 +36,20 @@
 <section class="bienvenida">
 
 
+    <div class="hero">
+
     <h2>Aero Domingo</h2>
+    <p>Conectando destinos con seguridad y confianza</p>
 
+    </div>
 
-    <div class="descripcion">
+</section>
+
+    <section class="sobre">
+
+    <div class="sobre-container">
+
+        <h2>Quienes somos?</h2>
 
         
         <p>Aero Domingo Airlines es una aerolínea moderna enfocada en 
