Diseño de la barra de navegación

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <h1>Aero Domingo</h1>
 
         <nav class="link">
-            <a href="">Inicio</a>
-            <a href="">Vuelos Disponibles</a>
-            <a href="">Servicios</a>
-            <a href="">Contacto</a>
+            <a href="#inicio">Inicio</a>
+            <a href="#vuelos">Vuelos Disponibles</a>
+            <a href="#servicios">Servicios</a>
+            <a href="#contacto">Contacto</a>
         </nav>
 
-        <button>Inicia Sesion</button>
+        <button id="login" type="button">Inicia Sesion</button>
 
     </header>
     
@@ -33,7 +33,7 @@
 
     <main>
 
-<section class="bienvenida">
+<section id="inicio" class="bienvenida">
 
 
     <div class="hero">
@@ -71,7 +71,7 @@
 
 
 
-<section class="moduloVuelo">
+<section id="vuelos" class="moduloVuelo">
     
         <h2>Buscar vuelos</h2>
 
@@ -88,7 +88,7 @@
 
         <input type="number" name="pasajeros" id="pasajeros" placeholder="Numero de pasajeros">
 
-        <input type="button" name="buscar" id="buscar" value="Buscar Vuelos">
+        <input type="submit" name="buscar" id="buscar" value="Buscar Vuelos">
 
         </form>
 
@@ -97,7 +97,7 @@
 
 </section>
 
-<section class="servicios">
+<section id="servicios" class="servicios">
 
     <h2>Servicios disponibles</h2>
 
