--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 
     <h2>Servicios disponibles</h2>
 
+
+    <div class="servicios-container">
+
     <div>
         <h3>Servicios para pasajeros</h3>
         <ul>
@@ -134,6 +137,10 @@
             <li>Alquiler de autos y hoteles (opcional)</li>
         </ul>
     </div>
+
+
+    </div>
+
 </section>
 
 
@@ -143,6 +150,8 @@
     <footer>
 
     <div class="contacto">
+
+        <h2>Contacto</h2>
 
         <form id="contacto">
 
