modificacion del footer y su diseño

--- a/index.html
+++ b/index.html
@@ -146,10 +146,7 @@
 
     </main>
 
-
-    <footer>
-
-    <div class="contacto">
+<div class="contacto">
 
         <h2>Contacto</h2>
 
@@ -169,6 +166,49 @@
         </form>
 
     </div>
+
+
+
+    <footer>
+
+
+    <div class="footer-container">
+
+        <div class="redes">
+
+        <h2>Nuestras Redes</h2>
+
+            <a href="">instagram</a>
+            <a href="">Tik Tok</a>
+            <a href="">Facebook</a>
+            <a href="">X</a>
+
+        </div>
+
+    <div class="contacto-directo">
+        <h2>Contacto</h2>
+
+        <a href="tel:+18095551234">+1 809 555 1234</a>
+        <a href="mailto:contacto@aerodomingo.com">contacto@aerodomingo.com</a>
+        <p>Lunes a viernes, 8:00 a.m. - 6:00 p.m.</p>
+
+    </div>
+
+    <div class="politicas">
+        <h2>Politicas</h2>
+
+        <a href="">Terminos y condiciones</a>
+        <a href="">Politicas de privacidad</a>
+        <a href="">Aviso legal</a>
+
+
+    </div>
+
+    </div>
+
+
+    <p>© 2026 Todos los derechos reservados</p>
+
 
 
 
