agregando logotipos a las redes del footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/2.0.0/uicons-brands/css/uicons-brands.css">
+
 
 
     <link rel="stylesheet" href="style.css">
@@ -153,15 +155,15 @@
         <form id="contacto">
 
             <label for="nombre">Nombre</label>
-            <input type="text" name="nombre" id="nombre" placeholder="José Ramírez">
+            <input type="text" name="nombre" id="nombre" placeholder="José Ramírez" required>
 
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" placeholder="JoseRamirez@gmail.com">
+            <input type="email" name="email" id="email" placeholder="JoseRamirez@gmail.com" required>
 
             <label for="comentario">Comentario</label>
             <textarea name="comentario" id="comentario"></textarea>
 
-            <button type="button">Enviar</button>
+            <button type="submit">Enviar</button>
 
         </form>
 
@@ -178,10 +180,10 @@
 
         <h2>Nuestras Redes</h2>
 
-            <a href="">instagram</a>
-            <a href="">Tik Tok</a>
-            <a href="">Facebook</a>
-            <a href="">X</a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fi fi-brands-instagram"></i></a>
+            <a href="https://www.tiktok.com/" target="_blank"><i class="fi fi-brands-tik-tok"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fi fi-brands-facebook"></i></a>
+            <a href="https://www.x.com/" target="_blank"><i class="fi fi-brands-twitter-alt"></i></a>
 
         </div>
 
