Pagina del login creada y su diseño final agregado

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="#contacto">Contacto</a>
         </nav>
 
-        <button id="login" type="button">Inicia Sesion</button>
+        <button id="btn-login" type="button">Inicia Sesion</button>
 
     </header>
     
