--- a/login.html
+++ b/login.html
@@ -10,8 +10,8 @@
 
     <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/2.0.0/uicons-brands/css/uicons-brands.css">
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="login-style.css">
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/estilo-login/login-style.css">
 </head>
 <body>
 
