haciendo dinamicos los links de la navbar

--- a/login.html
+++ b/login.html
@@ -20,10 +20,10 @@
         <h1>Aero Domingo</h1>
 
         <nav class="link">
-            <a href="#inicio">Inicio</a>
-            <a href="#vuelos">Vuelos Disponibles</a>
-            <a href="#servicios">Servicios</a>
-            <a href="#contacto">Contacto</a>
+            <a href="index.html">Inicio</a>
+            <a href="index.html#vuelos">Vuelos Disponibles</a>
+            <a href="index.html#servicios">Servicios</a>
+            <a href="index.html#contacto">Contacto</a>
         </nav>
 
         <button id="btn-login" type="button">Inicia Sesion</button>
