inicio de sesion de la pagina

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </nav>
 
         <button id="btn-login" type="button">Inicia Sesion</button>
+        <div id="user-area"></div>
 
     </header>
     
