--- a/login.html
+++ b/login.html
@@ -69,7 +69,7 @@
         <form id="register-form">
 
             <label for="usuario">Usuario</label>
-            <input type="text" name="usuario" id="usuario-register" placeholder="Ramón" required>
+            <input type="text" name="usuario" id="usuario-register" placeholder="Nombre y apellido" required>
 
             <label for="email">Email</label>
             <input type="email" name="email" id="email-register" placeholder="Ramón@gmail.com" required>
